--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,6 @@
+v0.1.2 - 2014-09-10
+- fixed problems with pyinstaller
+- added version string to main window title
+
 v0.1.1 - 2014-09-09
 - selected files can now be removed
