--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.2 - 2014-09-27
+- fixed threading
+- added support for remote upload
+- added support for the resize, rotation and noexif parameters
+
 v0.1.2 - 2014-09-10
 - fixed problems with pyinstaller
 - added version string to main window title
